--- a/app_discos/app_discos/src/app/app.component.html
+++ b/app_discos/app_discos/src/app/app.component.html
@@ -1,21 +1,3 @@
-<!-- <h1>Tienda de discos</h1>
-<ul>
-    <li *ngFor="let discos of discosList">{{discos.titulo}}</li>
-    
-</ul> -->
-
-<div class="card mb-4" style="max-width: 540px;">
-    <div class="row g-0" *ngFor="let discos of discosList">
-      <div class="col-md-4">
-        <img src={{discos.imagen}} class="img-fluid rounded-start" alt="...">
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">{{discos.titulo}}</h5>
-          <p class="card-text">{{discos.descripcion}}</p>
-          <p class="card-text"><small class="text-muted">{{discos.precio}}</small></p>
-        </div>
-      </div>
-    </div>
-
-  </div>
+  <app-header></app-header>
+  <app-home></app-home>
+  <app-footer></app-footer>
