--- a/app_heroes/app_heroes/src/app/components/cardmovie/cardmovie.component.html
+++ b/app_heroes/app_heroes/src/app/components/cardmovie/cardmovie.component.html
@@ -3,7 +3,7 @@
         <p>2002</p>
     </div>
     <div>
-        <img src="{{movie.Poster}}" alt="sin imagen">
+        <img src="{{getImageFound()}}" alt="movie.Title">
     </div>
     <div>
         <span>{{movie.Type}}</span>
